# monorepo

./: .dockerignore  .env.example  .gitignore  .nextest.toml  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  DOCKER-README.md  DOCKER_GUIDE.md  Dockerfile.conntest.source  Dockerfile.source  Dockerfile.source.dockerignore  Dockerfile.sourceavx512  Dockerfile.vdf.source  Dockerfile.vdf.sourcezen3  README.md  RELEASE-NOTES  TESTING.md  Taskfile.yaml  emp-install.py  go.mod  install-emp.sh  install-qclient.sh
.github/workflows/: docker-build-test.yml  rust-ci.yml
alias/: go.mod
bedlam/: .gitignore  README.md  build.sh  go.mod  go.sum  result.go  test.sh  testsuite_test.go
bedlam/circuit/: evaluator.go  garble.go  garbler.go  ioarg.go  parser.go  stream_evaluator.go  timing.go
bedlam/compiler/: arithmetic_test.go  compiler.go  compiler_test.go  errors.go  errors_test.go  lexer.go  parser.go  parser_test.go
bedlam/ot/: ferret.go  io.go
bedlam/p2p/: protocol.go
bedlam/pkg/: builtin.qcl
bedlam/types/: types.go
bls48581/: bls48581.go  go.mod  go.sum
build_utils/: go.mod  main.go
bulletproofs/: go.mod  go.sum
channel/: channel.go  go.mod  go.sum
client/: README.md  build.sh  go.mod  go.sum
client/cmd/: account.go  crossMint.go  dev.go  download-signatures.go  link.go  merge.go  quiet.go  root.go  transfer.go  uninstall.go  update.go  version.go
client/test/: Dockerfile  Dockerfile.qclient  README.md  run_tests.sh  test_install.sh
client/utils/: client.go  clientConfig.go  config.go  download.go  fileUtils.go  node.go  nodelog.go  paths.go  signatures.go  system.go  types.go
config/: config.go  engine.go  go.mod  go.sum  logger.go  p2p.go  version.go
conntest/: build.sh  go.mod  go.sum  main.go
consensus/: README.md  backoff_timer.go  consensus_committee.go  consensus_events.go  consensus_forks.go  consensus_leader.go  consensus_liveness.go  consensus_pacemaker.go  consensus_safety_rules.go  consensus_signature.go  consensus_signer.go  consensus_store.go  consensus_sync.go  consensus_timeout.go  consensus_tracing.go  consensus_verifier.go  consensus_voting.go  go.mod  go.sum  state_machine.go  state_machine_test.go  state_machine_viz.go  vote_aggregator.go  vote_collector.go  vote_collectors.go
crates/dkls23_ffi/: Cargo.toml  build.rs
crates/dkls23_ffi/src/: lib.rs
crates/quil-execution/: Cargo.toml
crates/quil-execution/src/: canonical_cursor.rs  engines.rs  global_schema.rs  hypergraph_state.rs  lib.rs  manager.rs  message_envelope.rs  prover_registry.rs  shard_frame_conflict_tests.rs
crates/quil-execution/src/compute_intrinsic/: intrinsic.rs  materialize.rs
crates/quil-execution/src/global_intrinsic/: conversions.rs  frame_header.rs  intrinsic.rs  kick_verify.rs  leaf_root_registration.rs  materialize.rs  mod.rs  prover_ops.rs  prover_shard_update.rs  prover_verify.rs  reassignment.rs  verify.rs
crates/quil-execution/src/hypergraph_intrinsic/: auth.rs  canonical.rs  dispatch.rs  mod.rs  vertex_ops.rs
crates/quil-execution/src/token_intrinsic/: config.rs  config_resolver.rs  constants.rs  input_membership.rs  materialize.rs  metadata_schema.rs  mint.rs  mod.rs  pending.rs  rdf_schema.rs  transaction.rs  verify.rs
crates/quil-execution/tests/: decoder_fuzz.rs
crates/quil-explorer/: Cargo.toml
crates/quil-explorer/src/: handlers.rs  lib.rs  message_ring.rs
crates/quil-hypergraph/: Cargo.toml
crates/quil-hypergraph/src/: addressing.rs  crdt.rs  lib.rs  snapshot.rs  testing.rs
crates/quil-lifecycle/: Cargo.toml
crates/quil-lifecycle/src/: lib.rs  supervisor.rs
crates/quil-node/: Cargo.toml
crates/quil-node/src/: blossomsub_consensus_publisher.rs  check_bootstrap.rs  check_submit.rs  dht_node.rs  direct_global_consensus_publisher.rs  logging.rs  main.rs  mem_stats.rs  prover_message_transport_prod.rs  prover_pipeline.rs  prover_tree_syncer_prod.rs  verify_migration.rs  worker_node.rs
crates/quil-node/src/master_node/: allocator_and_lifecycle.rs  archive_sync.rs  engines.rs  frame_pipeline.rs  grpc.rs  message_loop.rs  mod.rs  networking.rs  peer_info_publisher.rs  runtime_state.rs  storage.rs  worker_manager.rs
crates/quil-node/src/util/: multiaddr.rs
crates/quil-store/: Cargo.toml
crates/quil-store/src/: clock.rs  encoding.rs  hypergraph.rs  lib.rs  replica_store.rs  rocksdb_store.rs  shards.rs
dkls23_ffi/: dkls23.go  generate.sh  go.mod
docker/: .dockerignore  .env.example  Dockerfile.conntest.source  Dockerfile.source  Dockerfile.source.dockerignore  Dockerfile.sourceavx512  Dockerfile.vdf.sourceavx512  Dockerfile.vdf.sourcezen4  README.md  Taskfile.yaml  docker-compose.yml
emp-tool/: CMakeLists.txt
ferret/: ferret.go  go.mod  go.sum
go-libp2p/: go.mod  go.sum  libp2p_test.go
go-libp2p-blossomsub/: blossomsub.go  blossomsub_spam_test.go  blossomsub_test.go  comm.go  go.mod  go.sum  pubsub.go
go-multiaddr-dns/: resolve.go
hypergraph/: go.mod  go.sum  hyperedge.go  hypergraph.go  id_set.go  proofs.go  snapshot_manager.go  sync.go  sync_client_driven.go  vertex.go  vertex_data.go
lifecycle/: common_test.go  supervisor.go  supervisor_test.go
node/: build.sh  build_go.sh  go.mod  go.sum  main.go  test.sh
node/app/: node.go  (+4 more)
pebble/: commit_test.go  db_test.go  external_iterator_test.go  go.mod  go.sum  ingest.go  ingest_test.go  iterator_test.go  level_iter_test.go  mem_table_test.go  merging_iter_test.go  range_del_test.go  table_cache_test.go
protobufs/: application.pb.go  application.pb.gw.go  application.proto  application_grpc.pb.go  canonical_types.go  dispatch.go  dispatch_test.go  global.go  global.pb.go  global.pb.gw.go  global.proto  global_grpc.pb.go  global_test.go  go.mod  go.sum  keys.go  keys.pb.go  keys.proto  keys_test.go  node.go  node.pb.go  node.pb.gw.go  node.proto  node_grpc.pb.go  node_test.go
rpm/: go.mod  go.sum
scripts/: install-deps-ubuntu.sh
types/: go.mod  go.sum
utils/: go.mod  go.sum
vdf/: go.mod  go.sum  vdf.go  wesolowski_frame_prover.go  wesolowski_frame_prover_test.go
verenc/: go.mod  go.sum  verifiable_encryption.go  verifiable_encryption_test.go
(+833 files in other folders)
