# Copyright 2018 Chia Network Inc and POA Networks Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# and limitations under the License.
[workspace]
resolver = "2"
members = [
    "crates/vdf",
    "crates/channel",
    "crates/channel-wasm",
    "crates/bulletproofs-wasm",
    "crates/bls48581-wasm",
    "crates/verenc-wasm",
    "crates/classgroup",
    "crates/bls48581",
    "crates/ed448-rust",
    "crates/rpm",
    "crates/bulletproofs",
    "crates/verenc",
    "crates/ferret",
    "crates/dkls23_ffi",
    "crates/dkls23-wasm",
    "crates/dkls23",
    "crates/quil-types",
    "crates/quil-config",
    "crates/quil-lifecycle",
    "crates/quil-crypto",
    "crates/quil-tries",
    "crates/quil-tries-ffi",
    "crates/quil-store",
    "crates/quil-hypergraph",
    "crates/quil-keys",
    "crates/quil-keys-ffi",
    "crates/quil-hypergraph-ffi",
    "crates/quil-consensus",
    "crates/quil-p2p",
    "crates/quil-execution",
    "crates/quil-engine",
    "crates/quil-rpc",
    "crates/quil-node",
    "crates/quil-compiler",
    "crates/quil-wallet",
    "crates/libp2p-identity",
]

[patch.crates-io]
# Fork libp2p-identity to add Ed448 (KeyType=4) support for Quilibrium peer IDs
libp2p-identity = { path = "crates/libp2p-identity" }

[profile.release]
# rpath = false is important to make Go bindings work
rpath = false
lto   = true
debug = false
# panic = 'abort'
