[package]
name = "quil-store"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "RocksDB-backed storage implementations for the Quilibrium node"

[dependencies]
quil-types = { path = "../quil-types" }
quil-config = { path = "../quil-config" }
rocksdb = { version = "0.22", default-features = false, features = ["snappy"] }
prost = "0.13"
thiserror = "2"
tracing = "0.1"
num-bigint = "0.4"
tempfile = "3"
serde_json = "1"
hex = "0.4"
sha2 = "0.10"
libc = "0.2"
tokio = { version = "1", features = ["sync", "time", "rt"] }
tokio-util = "0.7"
